--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -3,9 +3,41 @@
  <head>
   <meta charset="UTF-8">
   <title>Basketball Team Signup</title>
+  
  </head>
- <body>
- </body>
+        <body>
+        <form action="/team" method="post">
+            <label>Team Name</label>
+            <br/>
+            <input type="text" name="name"> 
+            <br/>
+            <label>Coach</label>
+            <br/>
+            <input type="text" name="coach">
+            <br/>
+            <label>Point Guard</label>
+            <br/>
+            <input type="text" name="pg"> 
+            <br/>
+            <label>Shooting Guard</label>
+            <br/>
+            <input type="text" name="sg">
+            <br/>
+            <label>Small Forward</label>
+            <br/>
+            <input type="text" name="sf"> 
+            <br/>
+            <label>Power Forward</label>
+            <br/>
+            <input type="text" name="pf">
+            <br/>
+            <label>Center</label>
+            <br/>
+            <input type="text" name="c">
+            <br/>
+            <input type="Submit">
+        </form>
+        </body>
 </html>
 
 
