--- a/views/team.erb
+++ b/views/team.erb
@@ -3,6 +3,13 @@
  <head>
   <meta charset="UTF-8">
   <title>Basketball Team</title>
+  <h1>Team Name: <%=params[:name] %> </h1>
+  <h1>Coach: <%=params[:coach] %> </h1>
+  <h1>Point Guard: <%=params[:pg] %> </h1>
+  <h1>Shooting Guard: <%=params[:sg] %> </h1>
+  <h1>Small Forward: <%=params[:sf] %> </h1>
+  <h1>Power Forward: <%=params[:pf] %> </h1>
+  <h1>Center: <%=params[:c] %> </h1>
  </head>
  <body>
  
