--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -35,7 +35,7 @@
             <br/>
             <input type="text" name="c">
             <br/>
-            <input type="Submit">
+            <input type="submit" value="Submit">
         </form>
         </body>
 </html>
